--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card-custom-styles {
+  /* @apply border-[0.5px] border-zinc-100 dark:border-zinc-900/80; */
+  /* @apply border dark:border-zinc-800 dark:shadow-none shadow-[#f2f2ff] !shadow-lg hover:!shadow-md; */
+  @apply rounded-2xl dark:shadow-none bg-sky-50 dark:bg-zinc-900 shadow-[#f2f2ff] !shadow-lg hover:!shadow-md;
+  /* @apply border-t-2 border-l-2 border-[#fdfbfb] dark:border-none dark:shadow-none dark:bg-zinc-900; */
+}
